--- a/src/Project/Devs/Devs.WebAPI/appsettings.json
+++ b/src/Project/Devs/Devs.WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DevsConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=DevsDb; Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
