--- a/src/Project/Devs/Devs.Persistence/Devs.Persistence.csproj
+++ b/src/Project/Devs/Devs.Persistence/Devs.Persistence.csproj
@@ -10,4 +10,11 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Devs.Application\Devs.Application.csproj" />
+	  <ProjectReference Include="..\Devs.Domain\Devs.Domain.csproj" />
+	</ItemGroup>
 </Project>
