Authentication(JWt) config Commit - 9.10.2022

--- a/src/Project/Devs/Devs.WebAPI/appsettings.json
+++ b/src/Project/Devs/Devs.WebAPI/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DevsConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=DevsDb; Trusted_Connection=True;"
   },
+  "TokenOptions": {
+    "Audience": "rentacar@qubitfaruk.com",
+    "Issuer": "rentacar@qubitfaruk.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey",
+    "RefreshTokenTTL": 2
+  },
   "AllowedHosts": "*"
 }
